--- a/assets/css/lumen.bootstrap.css
+++ b/assets/css/lumen.bootstrap.css
@@ -913,12 +913,12 @@ textarea {
   line-height: inherit;
 }
 a {
-  color: #3498DB;
+  color: #9d426b;
   text-decoration: none;
 }
 a:hover,
 a:focus {
-  color: #3498DB;
+  color: #9d426b;
   text-decoration: underline;
 }
 a:focus {
@@ -1156,10 +1156,10 @@ mark,
   color: #999999;
 }
 .text-primary {
-  color: #3498DB;
+  color: #9d426b;
 }
 a.text-primary:hover {
-  color: #106a8c;
+  color: #772248;
 }
 .text-success {
   color: #ffffff;
@@ -1187,10 +1187,10 @@ a.text-danger:hover {
 }
 .bg-primary {
   color: #fff;
-  background-color: #3498DB;
+  background-color: #9d426b;
 }
 a.bg-primary:hover {
-  background-color: #106a8c;
+  background-color: #772248;
 }
 .bg-success {
   background-color: #28b62c;
@@ -2812,8 +2812,8 @@ fieldset[disabled] .btn-default.active {
 }
 .btn-primary {
   color: #ffffff;
-  background-color: #3498DB;
-  border-color: #127ba3;
+  background-color: #9d426b;
+  border-color: #772248;
 }
 .btn-primary:hover,
 .btn-primary:focus,
@@ -2821,8 +2821,8 @@ fieldset[disabled] .btn-default.active {
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
   color: #ffffff;
-  background-color: #106a8c;
-  border-color: #0c516c;
+  background-color: #9d426b;
+  border-color: #772248;
 }
 .btn-primary:active,
 .btn-primary.active,
@@ -2844,11 +2844,11 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #3498DB;
-  border-color: #127ba3;
+  background-color: #9d426b;
+  border-color: #772248;
 }
 .btn-primary .badge {
-  color: #3498DB;
+  color: #9d426b;
   background-color: #ffffff;
 }
 .btn-success {
@@ -3016,7 +3016,7 @@ fieldset[disabled] .btn-danger.active {
   background-color: #ffffff;
 }
 .btn-link {
-  color: #3498DB;
+  color: #9d426b;
   font-weight: normal;
   cursor: pointer;
   border-radius: 0;
@@ -3037,7 +3037,7 @@ fieldset[disabled] .btn-link {
 }
 .btn-link:hover,
 .btn-link:focus {
-  color: #3498DB;
+  color: #9d426b;
   text-decoration: underline;
   background-color: transparent;
 }
@@ -3178,7 +3178,7 @@ tbody.collapse.in {
   color: #ffffff;
   text-decoration: none;
   outline: 0;
-  background-color: #3498DB;
+  background-color: #9d426b;
 }
 .dropdown-menu > .disabled > a,
 .dropdown-menu > .disabled > a:hover,
@@ -3607,7 +3607,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav .open > a:hover,
 .nav .open > a:focus {
   background-color: #ffffff;
-  border-color: #3498DB;
+  border-color: #9d426b;
 }
 .nav .nav-divider {
   height: 1px;
@@ -3700,7 +3700,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
   color: #ffffff;
-  background-color: #3498DB;
+  background-color: #9d426b;
 }
 .nav-stacked > li {
   float: none;
@@ -4192,7 +4192,7 @@ fieldset[disabled] .navbar-default .btn-link:focus {
   color: #eeeeee;
 }
 .navbar-inverse {
-  background-color: #3498DB;
+  background-color: #9d426b;
   border-color: #2980B9;
 }
 .navbar-inverse .navbar-brand {
@@ -4360,7 +4360,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > .active > span:focus {
   z-index: 2;
   color: #ffffff;
-  background-color: #3498DB;
+  background-color: #9d426b;
   border-color: #127ba3;
   cursor: default;
 }
@@ -4476,11 +4476,11 @@ a.label:focus {
   background-color: #808080;
 }
 .label-primary {
-  background-color: #3498DB;
+  background-color: #9d426b;
 }
 .label-primary[href]:hover,
 .label-primary[href]:focus {
-  background-color: #106a8c;
+  background-color: #772248;
 }
 .label-success {
   background-color: #28b62c;
@@ -4521,7 +4521,7 @@ a.label:focus {
   vertical-align: baseline;
   white-space: nowrap;
   text-align: center;
-  background-color: #3498DB;
+  background-color: #9d426b;
   border-radius: 10px;
 }
 .badge:empty {
@@ -4543,7 +4543,7 @@ a.badge:focus {
 }
 a.list-group-item.active > .badge,
 .nav-pills > .active > a > .badge {
-  color: #3498DB;
+  color: #9d426b;
   background-color: #ffffff;
 }
 .nav-pills > li > a > .badge {
@@ -4713,7 +4713,7 @@ a.list-group-item.active > .badge,
 a.thumbnail:hover,
 a.thumbnail:focus,
 a.thumbnail.active {
-  border-color: #3498DB;
+  border-color: #9d426b;
 }
 .thumbnail .caption {
   padding: 9px;
@@ -4827,7 +4827,7 @@ a.thumbnail.active {
   line-height: 20px;
   color: #ffffff;
   text-align: center;
-  background-color: #3498DB;
+  background-color: #9d426b;
   -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   -webkit-transition: width 0.6s ease;
@@ -4978,8 +4978,8 @@ a.list-group-item:focus {
 .list-group-item.active:focus {
   z-index: 2;
   color: #ffffff;
-  background-color: #3498DB;
-  border-color: #3498DB;
+  background-color: #9d426b;
+  border-color: #9d426b;
 }
 .list-group-item.active .list-group-item-heading,
 .list-group-item.active:hover .list-group-item-heading,
@@ -5316,14 +5316,14 @@ a.list-group-item-danger.active:focus {
 }
 .panel-primary > .panel-heading {
   color: #ffffff;
-  background-color: #3498DB;
+  background-color: #9d426b;
   border-color: transparent;
 }
 .panel-primary > .panel-heading + .panel-collapse > .panel-body {
   border-top-color: transparent;
 }
 .panel-primary > .panel-heading .badge {
-  color: #3498DB;
+  color: #9d426b;
   background-color: #ffffff;
 }
 .panel-primary > .panel-footer + .panel-collapse > .panel-body {
@@ -6337,8 +6337,8 @@ button.close {
 .btn-primary:hover,
 .btn-primary:focus,
 .btn-group.open .dropdown-toggle.btn-primary {
-  background-color: #3498DB;
-  border-color: #127ba3;
+  background-color: #9d426b;
+  border-color: #772248;
 }
 .btn-success:hover,
 .btn-success:focus,
@@ -6388,7 +6388,7 @@ button.close {
 }
 .text-primary,
 .text-primary:hover {
-  color: #3498DB;
+  color: #9d426b;
 }
 .text-success,
 .text-success:hover {
